fix tchat overflow
fix tchat overflow

--- a/src/app/composants/tchat/tchat.component.css
+++ b/src/app/composants/tchat/tchat.component.css
@@ -13,6 +13,7 @@
 .chat-messages {
   height: 95%;
   width: 100%;
+  overflow-y: scroll;
 }
 
 .chat-message {
